examples/test/testpolicy16512.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16512
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key20: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value37
          key24: value46
      podSelector:
        matchLabels:
          key33: value43
          key12: value41
          key30: value30
